# kaggle

./: README.md  kaggledatasetdelete.py
COTS/: 0-665-f2score.ipynb  yolov5-high-resolution-training-9e0c48.ipynb
G-Research/: README.md
Google_ISLR_ASL/: compressed.py  config.py  cv_training.py  eval.py  functions.py  gomi.py  helper_functions.py  main.py  preprocess.py  requirements.txt  tamesi.py  train.py  実験メモ.txt
Google_ISLR_ASL/wandb/run-20230310_191810-iq2nhqfn/files/: config.yaml  wandb-metadata.json  wandb-summary.json
Google_ISLR_ASL/wandb/run-20230313_180447-n94z1s3c/files/: config.yaml  wandb-metadata.json  (+1 more)
Google_ISLR_ASL/wandb/run-20230321_145928-pz6eosru/: run-pz6eosru.wandb
Google_ISLR_ASL/wandb/run-20230321_161549-xprh3pzy/: run-xprh3pzy.wandb
Google_ISLR_ASL/wandb/run-20230321_161705-6mayemp7/: run-6mayemp7.wandb
Google_ISLR_ASL/wandb/run-20230321_161723-bq9f09xb/: run-bq9f09xb.wandb
Google_ISLR_ASL/wandb/run-20230321_161758-tft3fxze/: run-tft3fxze.wandb
RSNA2023_mammography/: README.md
Sartorius/: README.md  my-ensemble-privatescore-0-311.ipynb  my-ensemble.ipynb
Titanic-conpetition/: README.md  lightGBM.ipynb
enefit/: Readme.md  enefit-update-submission-logic-ad8fc8.ipynb
essay/: Readme.md
kaggle-pair-ai/: main.py  pyproject.toml
kaggle-pair-ai/datas/competitions/: drawing-with-llms.html  llm-classification-finetuning.html
kaggle-pair-ai/datas/discussions/: drawing-with-llms.html  llm-classification-finetuning.html
kaggle-pair-ai/src/: app.py  kaggle_utils.py
kaggle-pair-ai/src/database/: kaggle_data.db
(+37 files in other folders)
